news and updates

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>July 2021</strong>
+  headline: "Joined the PC of <a href=\"https://2022.esec-fse.org/\">ESEC/FSE 2022</a> taking place in Singapore."
+
 - date: <strong>May 2021</strong>
   headline: "Feeling honored. Received my second <a href=\"https://conf.researchr.org/track/icse-2021/icse-2021-awards#Award-Recipients-at-ICSE-2021\">ICSE Distinguished Reviewer Award</a>."
 
@@ -42,7 +45,7 @@
   headline: "Because of the Coronavirus, <a href=\"http://irc.asia.edu.tw/2020\">IRC 2020</a> and <a href=\"https://www.erross.org/\">ERRoSS 2020</a> have been moved to November 9-11th, 2020."
 
 - date: <strong>January 2020</strong>
-  headline: "Joined the PC of <a href=\"https://icsme2020.github.io/\">ICSME 2020</a> taking place  in Adelaide, Australia."
+  headline: "Joined the PC of <a href=\"https://icsme2020.github.io/\">ICSME 2020</a> taking place in Adelaide, Australia."
 
 - date: <strong>January 2020</strong>
   headline: "Joined the PC of <a href=\"https://conf.researchr.org/home/icse-2021\">ICSE 2021</a> taking place  in Madrid, Spain."
