--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: <strong>August 2021</strong>
+  headline: "Joined the PC of <a href=\"https://saner2022.uom.gr\">SANER 2022</a> taking place in Honolulu, Hawaii."
+
+- date: <strong>July 2021</strong>
+  headline: "Joined the PC of <a href=\"https://conf.researchr.org/home/msr-2022\">MSR 2022</a> co-located with <a href=\"https://conf.researchr.org/home/icse-2022\">ICSE 2022</a> in Pittsburgh, USA."
+
 - date: <strong>July 2021</strong>
   headline: "Joined the PC of <a href=\"https://2022.esec-fse.org/\">ESEC/FSE 2022</a> taking place in Singapore."
 
