added hints to news

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>November 2021</strong>
+  headline: "<a href=\"./service/forfwfreviewers\">Three hints</a> for reviewers of Austria's FWF project propsals."
+
 - date: <strong>August 2021</strong>
   headline: "Joined the PC of <a href=\"https://saner2022.uom.gr\">SANER 2022</a> taking place in Honolulu, Hawaii."
 
