--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>December 2021</strong>
+  headline: "Co-organizing the 5th Workshop on Validation, Analysis and Evolution of Software Tests (<a href=\"https://vst2022.scch.at/\">VST 2022</a>) co-located with <a href=\"https://saner2022.uom.gr/\">SANER 2022</a>."
+
 - date: <strong>November 2021</strong>
   headline: "<a href=\"./service/forfwfreviewers\">Three hints</a> for reviewers of Austria's FWF project propsals."
 
@@ -32,7 +35,7 @@
   headline: "Gave an invited talk on Mining and Analyzing Source Code Changes at <a href=\"https://asqt.cicero-software.com/\">ASQT 2020</a>."
 
 - date: <strong>November 2020</strong>
-  headline: "Co-organizing the 4th Workshop on Validation, Analysis and Evolution of Software Tests (<a href=\"http://vst2021.scch.at/\">VST 2021</a>) co-located with <a href=\"https://saner2021.shidler.hawaii.edu/\">SANER 2021</a>."
+  headline: "Co-organizing the 4th Workshop on Validation, Analysis and Evolution of Software Tests (<a href=\"https://vst2021.scch.at/\">VST 2021</a>) co-located with <a href=\"https://saner2021.shidler.hawaii.edu/\">SANER 2021</a>."
 
 - date: <strong>September 2020</strong>
   headline: "Joined the PC of <a href=\"https://se-2021.tu-bs.de/\">SE 2021</a> taking place in Braunschweig, Germany."
