added ICSE 2023 NIER

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: <strong>December 2021</strong>
+  headline: "Joined the PC of <a href=\"https://conf.researchr.org/track/icse-2023/icse-2023-NIER\">ICSE 2023 NIER</a> taking place in Melbourne, Australia."
+
+- date: <strong>December 2021</strong>
   headline: "Co-organizing the 5th Workshop on Validation, Analysis and Evolution of Software Tests (<a href=\"https://vst2022.scch.at/\">VST 2022</a>) co-located with <a href=\"https://saner2022.uom.gr/\">SANER 2022</a>."
 
 - date: <strong>November 2021</strong>
