--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: <strong>July 2022</strong>
+  headline: "Feeling honored. Received an <a href=\"https://2022.esec-fse.org/\">ESEC/FSE 2022</a> Distinguished Reviewer Award."
+
+- date: <strong>July 2022</strong>
+  headline: "Joined the PC of <a href=\"https://2023.esec-fse.org/\">ESEC/FSE 2023</a> taking place in San Francisco, USA."
+
 - date: <strong>December 2021</strong>
   headline: "Joined the PC of <a href=\"https://conf.researchr.org/track/icse-2023/icse-2023-NIER\">ICSE 2023 NIER</a> taking place in Melbourne, Australia."
 
