updated news, fwf info and phd students

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: <strong>September 2022</strong>
+  headline: "<a href=\"./service/forfwfreviewers\">Three hints</a> for reviewers of Austria's FWF stand-alone project propsals."
+
+- date: <strong>September 2022</strong>
+  headline: "Joined the PC of <a href=\"https://conf.researchr.org/home/icse-2024\">ICSE 2024</a> taking place in Lisbon, Portugal."
+
 - date: <strong>July 2022</strong>
   headline: "Feeling honored. Received an <a href=\"https://2022.esec-fse.org/\">ESEC/FSE 2022</a> Distinguished Reviewer Award."
 
