updated bio, news, ...

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>February 2023</strong>
+  headline: "Joined the PC of <a href=\"https://conf.researchr.org/home/icsme-2023\">ICSME 2023</a> taking place in Bogota, Colombia."
+
 - date: <strong>November 2022</strong>
   headline: "Joined the PC of <a href=\"https://conf.researchr.org/home/msr-2023\">MSR 2023</a> co-located with <a href=\"https://conf.researchr.org/home/icse-2023\">ICSE 2023</a> in Melbourne, Australia."
 
