--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>April 2023</strong>
+  headline: "Open position: I am looking for a <strong>PhD student</strong> who would like to do a PhD in Software Engineering with a focus on Program Analysis. See <a href=\"/wanted/openpositions\">Open Positions</a> for more information."
+  
 - date: <strong>February 2023</strong>
   headline: "Joined the PC of <a href=\"https://conf.researchr.org/home/icsme-2023\">ICSME 2023</a> taking place in Bogota, Colombia."
 
