added news and open positions for the SemImpact project

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>May 2023</strong>
+  headline: "Our project proposal <strong>Semantic Change Impact Analysis for Microservice-based Systems</strong> was accepted by FWF. We will have <a href=\"/wanted/openpositions\">open positions for 2 PhD students</a> and 1 student assistant."
+
 - date: <strong>April 2023</strong>
   headline: "Open position: I am looking for a <strong>PhD student</strong> who would like to do a PhD in Software Engineering with a focus on Program Analysis. See <a href=\"/wanted/openpositions\">Open Positions</a> for more information."
   
