--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,15 @@
+- date: <strong>September 2023</strong>
+  headline: "I am still looking for a PhD student in Software Engineering to work on  <strong>Semantic Change Impact Analysis for Microservice-based Systems</strong>. See <a href=\"/wanted/openpositions\">open positions</a> for how to apply."
+
+- date: <strong>July 2023</strong>
+  headline: "Joined the PC of <a href=\"https://conf.researchr.org/home/msr-2024\">MSR 2024</a> co-located with <a href=\"https://conf.researchr.org/home/icse-2024\">ICSE 2024</a> in Lisbon, Portugal."
+
+- date: <strong>July 2023</strong>
+  headline: "Joined the PC of <a href=\"https://conf.researchr.org/home/saner-2024\">SANER 2024</a> in Rovaniemi, Finland."
+
+- date: <strong>June 2023</strong>
+  headline: "Joined the PC of <a href=\"https://conf.researchr.org/home/fse-2024\">FSE 2024</a> in Porto de Galinas, Brazil."
+
 - date: <strong>May 2023</strong>
   headline: "Our project proposal <strong>Semantic Change Impact Analysis for Microservice-based Systems</strong> was accepted by FWF. We will have <a href=\"/wanted/openpositions\">open positions for 2 PhD students</a> and 1 student assistant."
 
