--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>December 2023</strong>
+  headline: "Our paper <strong>DValidator: An approach for validating dependencies in build configurations</strong> has been accepted for publication in the Journal of Systems and Software (JSS)."
+
 - date: <strong>September 2023</strong>
   headline: "I am still looking for a PhD student in Software Engineering to work on  <strong>Semantic Change Impact Analysis for Microservice-based Systems</strong>. See <a href=\"/wanted/openpositions\">open positions</a> for how to apply."
 
