added ESEC/FSE2023 DA award

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: <strong>December 2023</strong>
+  headline: "Feeling very honored. Received an <a href=\"https://2023.esec-fse.org/\">ESEC/FSE 2023</a> Distinguished Reviewer Award. This  is the second award in a row after having received it also in 2022."
+
+- date: <strong>December 2023</strong>
   headline: "Our paper <strong>DValidator: An approach for validating dependencies in build configurations</strong> has been accepted for publication in the Journal of Systems and Software (JSS)."
 
 - date: <strong>September 2023</strong>
