--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: <strong>January 2024</strong>
-  headline: "Our paper <strong>DRobotPerf: An Open-Source, Vendor-Agnostic, Benchmarking Suite for Evaluating Robotics Computing System Performance</strong> has been accepted at <a href=\"https://2024.ieee-icra.org/\">IRCA 2024</a> in Yokohama, Japan."
+  headline: "Our paper <strong>RobotPerf: An Open-Source, Vendor-Agnostic, Benchmarking Suite for Evaluating Robotics Computing System Performance</strong> has been accepted at <a href=\"https://2024.ieee-icra.org/\">ICRA 2024</a> in Yokohama, Japan."
 
 - date: <strong>December 2023</strong>
   headline: "Feeling very honored. Received an <a href=\"https://2023.esec-fse.org/\">ESEC/FSE 2023</a> Distinguished Reviewer Award. This  is the second award in a row after having received it also in 2022."
