--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>March 2024</strong>
+  headline: "Feeling very honored. Received an <a href=\"https://conf.researchr.org/home/icse-2024\">ICSE 2024</a> Distinguished Reviewer Award."
+
 - date: <strong>January 2024</strong>
   headline: "Our paper <strong>RobotPerf: An Open-Source, Vendor-Agnostic, Benchmarking Suite for Evaluating Robotics Computing System Performance</strong> has been accepted at <a href=\"https://2024.ieee-icra.org/\">ICRA 2024</a> in Yokohama, Japan."
 
