added PASDA paper

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>April 2024</strong>
+  headline: "Our paper <strong>PASDA: A Partition-based Semantic Differencing Approach with Best Effort Classification of Undecided Cases</strong> has been accepted for publication in the Journal of Systems and Software (JSS)."
+
 - date: <strong>March 2024</strong>
   headline: "Feeling very honored. Received an <a href=\"https://conf.researchr.org/home/icse-2024\">ICSE 2024</a> Distinguished Reviewer Award."
 
