added preprints for recently published papers

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,17 +1,17 @@
 - date: <strong>April 2024</strong>
-  headline: "Our paper <strong>PASDA: A Partition-based Semantic Differencing Approach with Best Effort Classification of Undecided Cases</strong> has been accepted for publication in the Journal of Systems and Software (JSS)."
+  headline: "Our paper <strong>PASDA: A Partition-based Semantic Differencing Approach with Best Effort Classification of Undecided Cases</strong> has been accepted for publication in the Journal of Systems and Software (JSS). <a href=\"/papers/Glock2024-pasda.pdf\">Pre-print.</a>"
 
 - date: <strong>March 2024</strong>
   headline: "Feeling very honored. Received an <a href=\"https://conf.researchr.org/home/icse-2024\">ICSE 2024</a> Distinguished Reviewer Award."
 
 - date: <strong>January 2024</strong>
-  headline: "Our paper <strong>RobotPerf: An Open-Source, Vendor-Agnostic, Benchmarking Suite for Evaluating Robotics Computing System Performance</strong> has been accepted at <a href=\"https://2024.ieee-icra.org/\">ICRA 2024</a> in Yokohama, Japan."
+  headline: "Our paper <strong>RobotPerf: An Open-Source, Vendor-Agnostic, Benchmarking Suite for Evaluating Robotics Computing System Performance</strong> has been accepted at <a href=\"https://2024.ieee-icra.org/\">ICRA 2024</a> in Yokohama, Japan. <a href=\"/papers/Vilches2023-robotperf.pdf\">Pre-print.</a>" 
 
 - date: <strong>December 2023</strong>
   headline: "Feeling very honored. Received an <a href=\"https://2023.esec-fse.org/\">ESEC/FSE 2023</a> Distinguished Reviewer Award. This  is the second award in a row after having received it also in 2022."
 
 - date: <strong>December 2023</strong>
-  headline: "Our paper <strong>DValidator: An approach for validating dependencies in build configurations</strong> has been accepted for publication in the Journal of Systems and Software (JSS)."
+  headline: "Our paper <strong>DValidator: An approach for validating dependencies in build configurations</strong> has been accepted for publication in the Journal of Systems and Software (JSS). <a href=\"/papers/Macho2023-dvalidator.pdf\">Pre-print.</a>"
 
 - date: <strong>September 2023</strong>
   headline: "I am still looking for a PhD student in Software Engineering to work on  <strong>Semantic Change Impact Analysis for Microservice-based Systems</strong>. See <a href=\"/wanted/openpositions\">open positions</a> for how to apply."
