--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,3 +1,29 @@
+- title: "PentestGPT: An LLM-empowered Automatic Penetration Testing Tool"
+  image: 
+  authors: G. Deng, Y. Liu, V. M. Vilches, P. Liu, Y. Li, Y. Xu, T. Zhang, Y. Liu, M. Pinzger, and S. Rass
+  proceedings: Proceedings of the USENIX Security Symposium 
+  pages: to appear
+  publisher: USENIX 
+  year: 2024
+  description: 
+  link:
+    url: https://arxiv.org/pdf/2308.06782
+    display: pdf
+  highlight:
+
+- title: "Microservice API Evolution in Practice: A Study on Strategies and Challenges"
+  image: 
+  authors: A. Lercher, J. Glock, C. Macho, and M. Pinzger	
+  proceedings: Journal of Systems and Software (JSS)
+  pages: vol. 215
+  publisher: Elsevier
+  year: 2024
+  description: "This paper reports on the findings of 17 semi-structured interviews with developers, architects, and managers in 11 companies to identify microservice API evolution strategies and challenges in practice. In total, we identified six strategies and six challenges for REpresentational State Transfer (REST) and event-driven communication via message brokers. The strategies mainly focus on API backward compatibility, versioning, and close collaboration between teams. The challenges include change impact analysis efforts, ineffective communication of changes, and consumer reliance on outdated versions, leading to API design degradation. We defined two important problems in microservice API evolution resulting from the challenges and their coping strategies: tight organizational coupling and consumer lock-in. To mitigate these two problems, we propose automating the change impact analysis and investigating effective communication of changes as open research directions."
+  link:
+    url: ../papers/Lercher2024-apis.pdf
+    display: pdf
+  highlight: 1
+
 - title: "PASDA: A Partition-based Semantic Differencing Approach with Best Effort Classification of Undecided Cases"
   image: 
   authors: J. Glock, J. Pichler, and M. Pinzger	
@@ -27,7 +53,7 @@
 - title: "RobotPerf: An Open-Source, Vendor-Agnostic, Benchmarking Suite for Evaluating Robotics Computing System Performance"
   image: 
   authors: 	V. M. Vilches, J. Jabbour, Y.-S. Hsiao, Z. Wan, A. Martínez-Fariña, M. Crespo-Álvarez, M. Stewart, J. M. Reina-Muñoz, P. Nagras, G. Vikhe, M. Bakhshalipour, M. Pinzger, S. Rass, S. Panigrahi, G. Corradi, N. Roy, P. B. Gibbons, S. M. Neuman, B. Plancher, and V. J. Reddi
-  proceedings: Prodceedings of the International Conference on Robotics and Automation (ICRA)
+  proceedings: Proceedings of the International Conference on Robotics and Automation (ICRA)
   pages: to appear
   publisher: IEEE 
   year: 2024
